fix: flex-1 및 overflow-y-scroll 레이아웃 이슈 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,12 +66,8 @@
   --text-caption--line-height: 1rem; /* 16px */
 }
 
+html,
 body {
-  min-width: 300px;
-  min-height: 600px;
   width: 100dvw;
   height: 100dvh;
-  overflow-x: hidden;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
